Fix notification collapsing making user card hidden

--- a/src/components/notification/notification.scss
+++ b/src/components/notification/notification.scss
@@ -3,12 +3,15 @@
 // TODO Copypaste from Status, should unify it somehow
 .notification {
   .non-mention.collapsed {
-    overflow: hidden;
-    max-height: 75px;
-    mask: linear-gradient(to top, white, transparent) bottom/100% 35px no-repeat,
-          linear-gradient(to top, white, white);
-    -webkit-mask-composite: xor;
-    mask-composite: exclude;
+    .StatusContent {
+      overflow: hidden;
+      max-height: 60px;
+      mask: linear-gradient(to top, white, transparent) bottom/100% 35px no-repeat,
+            linear-gradient(to top, white, white);
+      -webkit-mask-composite: xor;
+      mask-composite: exclude;
+      margin-bottom: -10px;
+    }
   }
 }
 
